# IFSC_PROGOO_HP50G

./: .gitignore  CMakeLists.txt  README.md  analise.md  implementacao.md  projeto.md  resources.qrc  settings.sema
.mds/: implementacao.md  projeto.md  sema.md  testes.md
code/: customlabel.h  dashboardwin.cpp  dashboardwin.h  database.cpp  database.h  main.cpp  resources.qrc  settings.hpp  settingsmanager.cpp  settingsmanager.h  settingswin.cpp  settingswin.h  windowmanager.cpp  windowmanager.h  winmanager.cpp  winmanager.h
code/dashboard/: dashboardwin.cpp  dashboardwin.h
code/data/: database.cpp  database.h
code/networking/: netmanager.cpp  netmanager.h
code/settings/: settingsmanager.h  settingswin.cpp  settingswin.h
code/widgets/: custombutton.h  customchart.h  customlabel.h
uml/: SEMA.vpp  tete.qmodel
